# trx

./: .gitignore  Makefile  README.md
api/: Makefile  sub.mk
api/include/: trx.h
api/src/: sub.mk  trx.c  trx_private.c  trx_private.h
common/: sub.mk  trx_path.c  trx_path.h  utils.c  utils.h
demo/: Makefile
demo/host/: Makefile  trx_demo.c
demo/host/include/: trx_demo.h
demo/ta/: Makefile  sub.mk  trx_demo_private.h  trx_demo_ta.c  user_ta_header_defines.h
demo/ta/include/: trx_demo_ta.h
manager/: Makefile  sub.mk  ta_entry.c  trx_authentication.c  trx_authentication.h  trx_authorization.c  trx_authorization.h  trx_cipher.c  trx_cipher.h  trx_db.c  trx_db.h  trx_db_map.c  trx_db_map.h  trx_file.c  trx_file.h  trx_ibme.c  trx_ibme.h  trx_keys.c  trx_keys.h  trx_manager.c  trx_manager_defaults.h  trx_manager_private.h  trx_manager_ta.c  trx_pobj.c  trx_pobj.h  trx_setup.c  trx_setup.h  trx_tss.c  trx_tss.h  trx_utils.c  trx_utils.h  trx_volume.c  trx_volume.h  trx_volume_table.c  trx_volume_table.h  user_ta_header_defines.h  utils.c  utils.h
manager/include/: trx_manager_ta.h
scripts/: setup.sh
setup/: Makefile  trx_setup.c
setup/host/: Makefile  trx_setup.c
setup/host/include/: trx_setup.h
setup/include/: trx_setup.h
setup/scripts/: setup.sh
setup/ta/: Makefile  sub.mk  trx_setup_ta.c  user_ta_header_defines.h
setup/ta/include/: trx_setup_ta.h
trusted_authority/: CMakeLists.txt  Makefile  trx_ta.c  trx_ta.h
